mailhog/mailhog-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog
  namespace: mailhog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailhog
  template:
    metadata:
      labels:
        app: mailhog
    spec:
      containers:
      - name: mailhog
        image: mailhog/mailhog:latest
        ports:
        - containerPort: 1025
        - containerPort: 8025

---
apiVersion: v1
kind: Service
metadata:
  name: mailhog
  namespace: mailhog
spec:
  selector:
    app: mailhog
  ports:
    - protocol: TCP
      port: 1025
      targetPort: 1025
    - protocol: TCP
      port: 8025
      targetPort: 8025
